trunk/Archive2/60/9264fccce790a5/output
main.cpp:1:15: error: zero size arrays are an extension [-Werror,-Wzero-length-array]
int PTdecimal[0][4]={};
              ^
main.cpp:2:14: error: zero size arrays are an extension [-Werror,-Wzero-length-array]
int Kdecimal[0][4]={};
             ^
2 errors generated.
main.cpp:1:19: error: ISO C++ forbids zero-size array 'PTdecimal' [-Wpedantic]
 int PTdecimal[0][4]={};
                   ^
main.cpp:2:18: error: ISO C++ forbids zero-size array 'Kdecimal' [-Wpedantic]
 int Kdecimal[0][4]={};
                  ^
