trunk/Archive2/60/9264fccce790a5/main.cpp
int PTdecimal[0][4]={};
int Kdecimal[0][4]={};
